...
    <string name="filter_label_department">Department</string>
    <string name="filter_in_theaters">In Theaters</string>
    <string name="filter_upcoming">Upcoming</string>
    <string name="filter_popular">Popular</string>
    <string name="filter_on_tv">On TV</string>
    <string name="filter_people">People</string>
    <string name="coming_soon_title">Coming Soon</string>

    <!-- Discover -->
    <string name="discover_title">Discover</string>
    <string name="discover_filters_content_description">Filters</string>
    <string name="discover_filter_button_label">Filters</string>
    <string name="discover_filter_active_count">%1$d</string>
...
